# ScrambledSeg

./: .gitignore  CLAUDE.md  README.md  pixi.toml  potential_improvements.md  predict.py  predict_cli.py  pyproject.toml  slice_generator_projection.py
configs/: battery_config.yaml  training_config - Copy.yaml  training_config.yaml
scrambledSeg/: axis.py  predict_cli.py  transforms.py
scrambledSeg/analysis/: __init__.py  convergence_analyzer.py  metrics_analyzer.py
scrambledSeg/data/: datasets.py  preprocess_volumes.py
scrambledSeg/generation/: __init__.py  slice_generator_projection.py
scrambledSeg/inference/: predict.py
scrambledSeg/losses/: __init__.py  core.py
scrambledSeg/models/: segformer.py
scrambledSeg/prediction/: __init__.py  axis.py  cli.py  data.py  errors.py  predictor.py  tiff_utils.py  types.py
scrambledSeg/training/: config.py  rich_progress.py  train.py  trainer.py  transforms.py
scrambledSeg/utils/: __init__.py  hardware_profiler.py
scrambledSeg/visualization/: callbacks.py  core.py
tests/: conftest.py  test_axis.py  test_convergence_analyzer.py  test_dataset.py  test_datasets.py  test_losses.py  test_metrics_analyzer.py  test_predict_cli.py  test_prediction_data.py  test_predictor.py  test_preprocess_volumes.py  test_rich_progress.py  test_segformer.py  test_slice_generator_projection.py  test_tiff_utils.py  test_train_entrypoint.py  test_trainer_metrics.py  test_transforms.py  test_visualization_callbacks.py  test_visualization_core.py
